# easy-logger

./: .gitignore  CMakeLists.txt  easylogger.c  easylogger.h
